# Candle_Robot_ROS2

./: .gitignore  CLAUDE.md  frames_2026-03-17_01.26.08.gv  run_amcl.sh  test.sh  test.urdf  walkthrough.md
colcon_ws/: fix.py  profile.txt  start_candle.sh  strace.out  test_dns.py  test_pkg.py  test_which.py
colcon_ws/install/: local_setup.sh  setup.sh
colcon_ws/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
colcon_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
colcon_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
colcon_ws/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
colcon_ws/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
colcon_ws/install/dynamixel_workbench/share/dynamixel_workbench/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
colcon_ws/install/dynamixel_workbench_msgs/share/dynamixel_workbench_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
colcon_ws/install/dynamixel_workbench_toolbox/include/dynamixel_workbench_toolbox/: dynamixel_driver.h  dynamixel_item.h  dynamixel_tool.h  dynamixel_workbench.h
colcon_ws/log/: latest_build
colcon_ws/src/feetech/feetechlib/: CMakeLists.txt
colcon_ws/src/main_run/: CMakeLists.txt  package.xml
colcon_ws/src/main_run/config/: nav2_params.yaml  rplidar.yaml
colcon_ws/src/main_run/launch/: bringup_all.launch.py  main_run.launch.py  navigation.launch.py
colcon_ws/src/main_run/maps/: empty_world.pgm  empty_world.yaml  map.yaml
colcon_ws/src/main_run/rviz/: custom_view.rviz
colcon_ws/src/main_run/scripts/: mobile_goal_tracker.py  obstacle_avoidance.py  sphere_wanderer.py
colcon_ws/src/main_run/src/: get_initialpose.cpp  navicontroltopic.cpp  nodecontrols.cpp  nodelaunch.cpp  nodeshutdown.cpp
colcon_ws/src/main_run/urdf/: backpack_2d.urdf  green_sphere.urdf
colcon_ws/src/odom/: CMakeLists.txt  package.xml
colcon_ws/src/odom/src/: get_odom.cpp  odom_c.cpp
colcon_ws/src/urdf_tutorial/: CMakeLists.txt  convert_stls.py  convert_stls.sh
colcon_ws/src/urdf_tutorial/launch/: gazebo.launch.py
colcon_ws/src/urdf_tutorial/meshes/: updatedtray.stl
colcon_ws/src/urdf_tutorial/rviz/: urdf.rviz
colcon_ws/src/urdf_tutorial/urdf/: feetech_tray.urdf.xacro
colcon_ws/src/urdf_tutorial/world/: apartment.world  optimized.world
log/: latest_build
(+608 files in other folders)
