cmake_minimum_required(VERSION 3.8)
project(urdf_tutorial)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(urdf REQUIRED)
find_package(gazebo_ros2_control REQUIRED)

install(DIRECTORY
  urdf
  meshes
  launch
  rviz
  config
  world
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
